--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Open Sans', sans-serif;
     background: #f7f7f7;
@@ -35,18 +34,14 @@ main {
     margin: 5px 0;
     border-radius: 6px;
     cursor: pointer;
-    color: white;
+    color: black;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
 }
-
-.teorico { background: #1F3A93; }
-.taller { background: #A20021; }
-.complementario { background: #6EAE51; }
-.ingles { background: #7EC8E3; }
-.titulo { background: #555555; }
-.cursado { background: #28a745 !important; }
 
 footer {
     text-align: center;
     margin-top: 30px;
     color: #666;
 }
+
